# anatomist

./: .env.example  .gitignore  .gitleaks.toml  .prettierignore  LICENSE  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.base.json  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml
.husky/: pre-push
apps/api/: .dockerignore  Dockerfile  drizzle.config.ts  package.json  tsconfig.json
apps/api/drizzle/: 0000_initial_schema.sql  0001_payload_inline.sql  0002_chain_owners.sql  0003_auth_columns_and_api_keys.sql  0004_ai_orchestration.sql  0005_chain_pins.sql  0006_projects.sql  0007_project_dataset_references.sql  0008_project_code_exports.sql  0009_nappy_alex_wilder.sql
apps/api/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0004_snapshot.json  0005_snapshot.json  0006_snapshot.json  0009_snapshot.json  _journal.json
apps/api/scripts/: doctor.ts  infra-check.ts  seed-local-user.ts
apps/api/scripts/measure-routing-cost/: README.md  index.ts  workload.ts
apps/api/scripts/verify-generated-code/: README.md  fixtures.ts  index.ts  runner.py
apps/api/src/: env.ts  index.ts  load-env.ts  server.ts
apps/api/src/ai/: ai-events.ts  budget.ts  orchestrator.ts
apps/api/src/auth/: api-keys.ts  auth-events.ts  jwt.ts  local-user.ts  master-key.ts  password.ts  refresh-tokens.ts  register-http-user.ts
apps/api/src/canvas/: architecture-events.ts  explain-error.ts  reasoning-emit.ts  routes.ts
apps/api/src/chains/: permissions.ts
apps/api/src/chat-sessions/: routes.ts
apps/api/src/code-exports/: routes.ts
apps/api/src/compute/: routes.ts
apps/api/src/dataset-references/: routes.ts
apps/api/src/db/: index.ts  schema.ts
apps/api/src/doctor/: index.ts  runner.ts  types.ts
apps/api/src/identity/: local-key-store.ts  register-user.ts
apps/api/src/lifecycle/: system-events.ts
apps/api/src/projects/: project-events.ts  routes.ts
apps/api/test/: chat-sessions.test.ts  doctor.live.test.ts  doctor.test.ts  e2e-smoke.test.ts  health.test.ts  local-key-store.test.ts  named-exceptions-negative.test.ts  register-user.test.ts
apps/api/test/ai/: cost-stats.test.ts  discipline-wiring.test.ts
apps/mi-backend/: .env.example  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
apps/mi-backend/mi_backend/: __init__.py  app.py  config.py
apps/mi-backend/mi_backend/models/: __init__.py  jlens_runtime.py  loader.py  registry.py
apps/mi-backend/mi_backend/routes/: __init__.py  chat.py  frontier.py  health.py  models.py  probe.py
apps/mi-backend/mi_backend/stream/: __init__.py  tensor_ws.py
apps/mi-backend/tests/: conftest.py  test_frontier_proxy.py  test_grounded_stubs.py  test_health.py  test_jlens_vendor.py  test_live_gpt2.py  test_probe_stubs.py  test_ram_guard.py
apps/sae-backend/: .gitignore  README.md  main.py  pyproject.toml
apps/sae-backend/sae_backend/: app.py  config.py  runtime.py
apps/sae-backend/sae_backend/routes/: health.py  sae.py
apps/sae-backend/tests/: conftest.py  test_stub_contract.py
apps/web/: .dockerignore  Dockerfile  index.html  nginx.conf  package.json  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  main.tsx  styles.css
docs/: DEPLOYMENT.md
infra/: .env.production.example  README.md  docker-compose.prod.yml  docker-compose.yml
scripts/: workbench.mjs
(+128 files in other folders)
